--- a/src/my.html
+++ b/src/my.html
@@ -198,4 +198,5 @@
 
         $('#nickname').text(pagePre.login.nickname)
     </script>
+    <script src="./js/page-post.js" type="application/javascript"></script>
 </html>
