--- a/src/history.html
+++ b/src/history.html
@@ -28,9 +28,6 @@
         <script src="./config.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>
         <script src="./js/page-pre.js" type="application/javascript"></script>
-        <script>
-            log.debugon=0
-        </script>
         <style>
             /* @media screen and (min-width: 850px) {
                 body {
@@ -38,7 +35,7 @@
                     border-style: none solid none solid;
                 }
             } */
-            html,body,.index{
+            html,body,#index{
                 margin: 0px;width: 100%;height: 100%;
             }
             .videoList>li,.videoList>li>a{
@@ -99,7 +96,7 @@
         </style>
     </head>
     <body style="max-width: 800px; margin: auto;background-color: #000000;">
-        <div class="index" style="background-color: #ffffff;position: relative;">
+        <div id="index" style="background-color: #ffffff;position: relative;">
             <div id="logo" class="unselectable" style="width:100%;position:absolute;top:0;bottom:51px;background-color: #ffffff;font-size:0;z-index: 9999999;margin: auto;" >
                 <div style="font-size:50px;position:absolute;top:30%;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
             </div>
@@ -277,5 +274,6 @@
        
 
     </script>
-    
+    <script src="./js/page-post.js" type="application/javascript"></script>
+
 </html>
