--- a/src/index.html
+++ b/src/index.html
@@ -157,13 +157,13 @@
 
             <div id="wordsframe" 
                 style="box-sizing: border-box;font-size:0;width:100%;position:absolute;
-                    top: 0;color: #ffffff;padding:5px 10px;display:none;">
+                    top: 0;color: #ffffff;padding:5px 5px;display:none;">
                 <form onsubmit="return false" action="javascript:return true">
                     <input id="word-in" autocomplete="off" type="text"
                         style="font-size: 16px;font-weight: 900;display: block;width:100%;box-sizing: border-box;border: none;
-                            background-color: #eaeaea;border-radius: 1px;line-height: 25px;height: 25px;"/>
+                            background-color: #eaeaea;border-radius: 1px;line-height: 25px;height: 25px;padding:0 3px;"/>
                 </form>
-                <div id="wordss" style="font-size:14px;position:absolute;top:30px;bottom:0;left:0;right:0;padding:5px 10px 5px 10px;">
+                <div id="wordss" style="font-size:14px;position:absolute;top:30px;bottom:0;left:0;right:0;padding:5px 5px 5px 8px;">
                     <div id="words"  class="scrollbar1" style="width:100%;height:100%;overflow: auto;">
                         <div id="wordtempl" class="unselectable" style="overflow:hidden;text-overflow: ellipsis;white-space: nowrap;
                             width:100%;display:none;cursor: pointer;line-height: 20px;" >
@@ -194,7 +194,7 @@
                     ||
                 </button>
             </div> -->
-            <div id="prevnextpad" style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;">    
+            <div id="prevnextpad" style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;margin-bottom: 10px;">    
                 <span id="prevline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 37.5%;background: white;border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;border-style:solid;background-color: #ffffff;">
                     上一句
                 </span>
@@ -208,7 +208,7 @@
                     下一句
                 </span>
             </div>
-            <div id="gearframe1" style="position: relative;background-color: #ffffff;margin-bottom:10px;">
+            <div id="gearframe1" style="position: relative;background-color: #ffffff;margin-bottom:10px;display:none;">
                 <div id="gearframe" class="unselectable" style="position: relative;height:46px;overflow: hidden;border-width: 0 0 1px 0; border-color: #827e7e;border-style: solid;background-color: #ffffff;">
                     <div id="gear" class="unselectable" 
                         style="height:0;border-width:23px 0;border-style:dashed;border-color: #d8d8d8;width:5000px;
