--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
                 <div id="wordsframe_cancel" style="text-align: center;font-size:16px;position:absolute;top:100px;left:0;right:0;">点击取消</div>
             </div>
             <div id="zh_subtitles" class="unselectable" 
-                style="line-height: 30px;width: 100%;text-align: center;background-color: #ffffff;margin-top:5px;font-size: 18px;margin-bottom: 5px;
+                style="line-height: 30px;width: 100%;text-align: center;background-color: #ffffff;margin-top:5px;font-size: 18px;
                     min-height:64px;" >
             </div>
             <div id="chDialog" class="chDialog unselectable" style="width:100%;height:20px;font-size:12px;color:#9b9b9b;text-align: center;padding:0 5px;overflow: hidden;
