--- a/src/my.html
+++ b/src/my.html
@@ -120,8 +120,8 @@
 
         if(is_weixn()){
 
-            $.get('/mumu/wxjsapiticket',(res)=>{
-            $.get('/mumu/wxsign',{ticket:res.data.ticket,url:location.href},(res)=>{
+            $.post('/mumu/wxjsapiticket',(res)=>{
+            $.post('/mumu/wxsign',{ticket:res.data.ticket,url:location.href},(res)=>{
                 console.log(JSON.stringify(res));
                 wx.config({
                     debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
