--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,19 @@
         </script>
         <style>
             @media screen and (min-width: 700px) {
-                #video,#video1,#video2,#summtrans,#wordsframe,#hints,#videoshasow,#videobox {
+                #video,#video1,#video2,#videobox {
                     height:350px;
+                }
+                #summtrans,#wordsframe,#hints,#videoshasow {
+                    height:380px;
                 }
             }
             @media screen and (max-width: 700px) {
-                #video,#video1,#video2,#summtrans,#wordsframe,#hints,#videoshasow,#videobox {
+                #video,#video1,#video2,#videobox {
                     height:220px;
+                }
+                #summtrans,#wordsframe,#hints,#videoshasow {
+                    height:250px;
                 }
             }
 
