--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
             </div>
             <!-- 字幕控制显示组件块 -->
             <div id="controlpad" style="justify-content: space-around;display: flex;height: 35px;align-items: center;position:relative;">
-                <span id="loopVideoBtn" class="unselectable" 
+                <span id="loopVideoBtn" class="unselectable ellipsis" 
                     style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
                         border: 1px solid #676767;background-color: #000000;border-radius: 3px;">
                     循环
@@ -246,7 +246,7 @@
                         border: 1px solid #bfbbbb;background-color: #ffffff;border-radius: 3px;display:none;">
                     连续
                 </span> -->
-                <span id="searchbtn" class="unselectable" 
+                <span id="searchbtn" class="unselectable ellipsis" 
                     style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
                         border: 1px solid #676767;background-color: #000000;border-radius: 3px;">
                     查词
@@ -265,12 +265,12 @@
                     <svg style="width: 15px;height: 15px;vertical-align: middle;"  t="1621440294821" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2770" width="200" height="200"><path d="M309.3 130.7h-70.9c-24.3 0-44 19.7-44 44v674.5c0 24.3 19.7 44 44 44h70.9c24.3 0 44-19.7 44-44V174.7c0-24.3-19.7-44-44-44z m476.3 0h-70.9c-24.3 0-44 19.7-44 44v674.5c0 24.3 19.7 44 44 44h70.9c24.3 0 44-19.7 44-44V174.7c0-24.3-19.7-44-44-44z" p-id="2771" fill="#bfbbbb"></path></svg>
                     <span class="diandu" style="font-size:12px;display:none;vertical-align: middle;color:rgb(191, 187, 187);"> 读</span>
                 </span>
-                <span id="wordbookpadBtn" class="unselectable" 
+                <span id="wordbookpadBtn" class="unselectable ellipsis" 
                     style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
                         border: 1px solid #676767;background-color: #000000;border-radius: 3px;position:relative;">
                     单词本
                 </span>
-                <span id="subtitlesBtn" class="unselectable"
+                <span id="subtitlesBtn" class="unselectable ellipsis"
                     style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
                         border: 1px solid #676767;background-color: #000000;border-radius: 3px;">
                     字幕
