--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,12 @@
     </head>
     <body class="unselectable" style="width: 100%;height: 100%;margin:0;padding:0;background-color: #272727;" >
         <div id="logo" class="unselectable" style="max-width:800px;height:100%;position:relative;background-color: #ffffff;font-size:0;margin: auto;" >
-            <div style="font-size:50px;position:absolute;top:30%;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
+            <div style="position:absolute;top:30%;width:100%;height:100px;">
+                <div style="font-size:50px;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
+                <div style="font-size:23px;width:100%;text-align: center;color:#e1e1e1;font-weight: 100;margin-top: -5px;">
+                    创造英文环境
+                </div>
+            </div>
         </div>
         
         <div id="index" style="max-width:800px;height:100%;margin: auto;position:relative;background-color: #000000;font-size:0;display: none;" >
