--- a/src/index.html
+++ b/src/index.html
@@ -44,10 +44,10 @@
             }
             @media screen and (max-width: 700px) {
                 #video,#video1,#video2,#videobox {
-                    height:220px;
+                    height:250px;
                 }
                 #summtrans,#wordsframe,#hints,#videoshasow {
-                    height:250px;
+                    height:280px;
                 }
             }
 
@@ -120,7 +120,7 @@
 
             <div id="summtrans" 
                 style="box-sizing: border-box;font-size:0;width:100%;position:absolute;
-                    top: 0;color: #ffffff;display:none;border-bottom:1px solid #404040;">
+                    top: 0;color: #ffffff;display:none;border-bottom:1px solid #827e7e;">
                 <div style="width:calc(100% - 111px);display:inline-block;position: absolute;vertical-align: middle;border-right: 1px solid #3c3c3c;
                         top:0;bottom:30px;">
                     <div id="summtrans-word" class="unselectable"
@@ -155,12 +155,12 @@
                         </div>
                     </div>
                 </div>
-                <div style="position:absolute;bottom:0;width:100%;border-top: 1px solid #3c3c3c;height:30px;background-color: #4c4c4c;">
+                <div style="position:absolute;bottom:0;width:100%;height:30px;background-color: #4c4c4c;border-top:1px solid #5f5f5f;">
                     <span id="favor" style="width:50%;font-size:14px;text-align: center;
                                 cursor: pointer;height:30px;line-height:30px;display:inline-block;">
                         收 藏
                     </span>
-                    <span id="addToWordbookBtn" style="width:50%;font-size:14px;text-align: center;border-left: 1px solid #3c3c3c;margin-left:-1px;
+                    <span id="addToWordbookBtn" style="width:50%;font-size:14px;text-align: center;border-left: 1px solid #5f5f5f;margin-left:-1px;
                                 cursor: pointer;height:30px;line-height:30px;display:inline-block;">
                         加入单词本
                     </span>
@@ -170,7 +170,7 @@
 
             <div id="wordsframe" 
                 style="box-sizing: border-box;font-size:0;width:100%;position:absolute;
-                    top: 0;color: #ffffff;padding:5px 5px;display:none;border-bottom:1px solid #404040;">
+                    top: 0;color: #ffffff;padding:5px 5px;display:none;border-bottom:1px solid #827e7e;">
                 <form onsubmit="return false" action="javascript:return true">
                     <input id="word-in" autocomplete="off" type="text"
                         style="font-size: 16px;font-weight: 900;display: block;width:100%;box-sizing: border-box;border: none;
