--- a/src/history.html
+++ b/src/history.html
@@ -180,7 +180,7 @@
                 var currentTime = localStorage.getItem(config.project+'-currentTime-'+item.no)
                 $('.videoList').append(
                     '<li style="cursor:pointer;" >'+
-                    `<a style="text-decoration:none;" draggable=false href=./video.html?videoNo=${item.no}>`+
+                    `<a style="text-decoration:none;" draggable=false href=./index.html?videoNo=${item.no}>`+
                     `<span class="logo" style="width: 18px;height:50px;line-height:50px;" ><img class="unselectable" draggable="false" style="width: 18px;height:18px;vertical-align: sub;" src="
                         ${
                             item.type==1?'./img/movie.svg':
