--- a/src/my.html
+++ b/src/my.html
@@ -100,8 +100,8 @@
                 </span>
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
-                    onclick="location.replace('history.html')">
-                    看过
+                    onclick="location.replace('chat.html')">
+                    聊天
                 </span>
                 <span class="unselectable" 
                     style="font-size:18px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#000000;font-weight:900;"
