--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
                     </div>
                 </div>
             </div>
-            <div style="width:100%;margin-top:5px;min-height:84px;margin-bottom: 5px;">
+            <div id="subtitlePad" style="width:100%;margin-top:5px;min-height:84px;">
                 <div id="zh_subtitles" class="unselectable" 
                     style="line-height: 30px;width: 100%;text-align: center;background-color: #000000;font-size: 18px;" >
                 </div>
@@ -213,7 +213,7 @@
                     ||
                 </button>
             </div> -->
-            <div id="prevnextpad" style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;margin-bottom: 10px;">    
+            <div id="prevnextpad" style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;margin-top: 5px;">    
                 <span id="prevline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 37.5%;
                         border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;border-style:solid;background-color: #000000;color:#bfbbbb;">
                     上一句
@@ -240,7 +240,7 @@
                 <img id="finger" src="./img/finger.svg" style="position:absolute;left:50%;transform: translateX(-50%);top:45%;width:31px;"/>
             </div>
             <!-- 字幕控制显示组件块 -->
-            <div id="controlpad" style="justify-content: space-around;display: flex;height: 35px;align-items: center;position:relative;">
+            <div id="controlpad" style="justify-content: space-around;display: flex;height: 35px;align-items: center;position:relative;margin-top:10px;">
                 <span id="loopVideoBtn" class="unselectable ellipsis" 
                     style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
                         border: 1px solid #676767;background-color: #000000;border-radius: 3px;">
