--- a/src/index.html
+++ b/src/index.html
@@ -300,10 +300,10 @@
             
 
 
-            <img id="headimg" style="position:absolute;width:45px;height:45px;bottom:150px;right:10px;cursor: pointer;border:1px solid #9c9c9c;
-                box-sizing: border-box;"/>
-            <div id="onlyLookHim" style="position:absolute;width:45px;height:45px;bottom:100px;right:10px;font-size: 13px;color: #ffffff;text-align: center;
-                padding:12px 0;box-sizing: border-box;cursor: pointer;border:1px solid #9c9c9c;">
+            <img id="headimg" draggable="false" style="position:absolute;width:45px;height:45px;bottom:150px;right:10px;cursor: pointer;border:1px solid #9c9c9c;
+                box-sizing: border-box;border-radius: 3px;"/>
+            <div id="onlyLookHim" style="position:absolute;width:45px;height:30px;bottom:121px;right:10px;font-size: 13px;color: #ffffff;text-align: center;
+                padding:5px 0;box-sizing: border-box;cursor: pointer;border:1px solid #9c9c9c;border-radius: 3px;color: rgb(191, 187, 187);">
                 只看Ta
             </div>
             
