--- a/src/index.html
+++ b/src/index.html
@@ -753,9 +753,11 @@
                 <div style="width:100%;height:70%;position:absolute;top:50%;transform: translateY(-50%);background-color: rgba(255, 255, 255);border-top:1px solid #ffffff;">
                     <div class="word ellipsis" style="font-size: 50px;text-align: center;font-weight: 900;margin-top:50px;">
                     </div>
-                    <div class="phonetic ellipsis" style="font-size: 20px;text-align: center;margin-top:20px;">
+                    <div class="phonetic ellipsis" style="font-size: 20px;text-align: center;margin-top:20px;height:25px;line-height:25px;">
                     </div>
-                    <div class="translation ellipsis" style="font-size: 20px;text-align: center;margin-top:100px;">
+                    <div class="translation ellipsis" style="font-size: 20px;text-align: center;margin-top:100px;height:25px;line-height:25px;">
+                    </div>
+                    <div class="inx ellipsis" style="font-size: 20px;text-align: center;margin-top:10px;height:25px;line-height:25px;">
                     </div>
                     <div style="height:35px;justify-content: space-around;display: flex;align-items: center;position: absolute;bottom:30px;width:100%;">
                         <button class="prev" style="width:25%;height:50px;">上一个</button>
