--- a/src/index.html
+++ b/src/index.html
@@ -750,20 +750,25 @@
             </div>
 
             <div id="rollShowWordsPad" style="width:100%;height:100%;position:absolute;top:0;background-color: rgba(0, 0, 0, 0.8);display:none;">
-                <div style="width:100%;height:70%;position:absolute;top:50%;transform: translateY(-50%);background-color: rgba(255, 255, 255);border-top:1px solid #ffffff;">
-                    <div class="word ellipsis" style="font-size: 50px;text-align: center;font-weight: 900;margin-top:50px;">
+                <div style="width:100%;height:80%;position:absolute;background-color: rgba(255, 255, 255);border-top:1px solid #ffffff;bottom:0;">
+                    <div class="word lines2" style="font-size: 50px;text-align: center;font-weight: 900;margin-top:50px;display: -webkit-inline-box;width: 100%;">
                     </div>
-                    <div class="phonetic ellipsis" style="font-size: 20px;text-align: center;margin-top:20px;height:25px;line-height:25px;">
+                    <div class="phonetic ellipsis" style="font-size: 25px;text-align: center;margin-top:20px;height:25px;line-height:25px;">
                     </div>
-                    <div class="translation ellipsis" style="font-size: 20px;text-align: center;margin-top:100px;height:25px;line-height:25px;">
+                    <div style="position:absolute;height:60px;width:100%;bottom:100px;">
+                        <div class="translation ellipsis" style="font-size: 20px;text-align: center;height:25px;line-height:25px;">
+                        </div>
+                        <div class="inx ellipsis" style="font-size: 20px;text-align: center;margin-top:10px;height:25px;line-height:25px;">
+                        </div>
                     </div>
-                    <div class="inx ellipsis" style="font-size: 20px;text-align: center;margin-top:10px;height:25px;line-height:25px;">
+                    <div style="height:50px;justify-content: space-around;display: flex;align-items: center;position: absolute;bottom:30px;width:100%;">
+                        <button class="prev" style="width:25%;height:50px;cursor: pointer;">上一个</button>
+                        <button class="stop" style="width:25%;height:50px;display:none;cursor: pointer;">暂停</button>
+                        <button class="start" style="width:25%;height:50px;cursor: pointer;">开始</button>
+                        <button class="next" style="width:25%;height:50px;cursor: pointer;">下一个</button>
                     </div>
-                    <div style="height:35px;justify-content: space-around;display: flex;align-items: center;position: absolute;bottom:30px;width:100%;">
-                        <button class="prev" style="width:25%;height:50px;">上一个</button>
-                        <button class="stop" style="width:25%;height:50px;display:none;">暂停</button>
-                        <button class="start" style="width:25%;height:50px;">开始</button>
-                        <button class="next" style="width:25%;height:50px;">下一个</button>
+                    <div style="width:100%;height:15px;text-align: center;position:absolute;bottom:5px;">
+                        <span class="restart" style="font-size:12px;cursor: pointer;color: #8e8e8e;text-decoration: underline;">重新开始</span>
                     </div>
                 </div>
             </div>
