--- a/src/index.html
+++ b/src/index.html
@@ -502,7 +502,7 @@
                     <span id="wordbooksBtn" style="height:35px;line-height:35px;width:33.33333%;font-size:15px;display:inline-block;cursor: pointer;color:#ffffff;
                         text-align: center;position: relative;">
                         单词本
-                        <img id="startRollBtn" src="./img/start.svg" style="position: absolute;right:0;width:15px;padding:10px 3px;"/>
+                        <img id="startRollBtn" src="./img/start.svg" style="position: absolute;right:0;width:15px;padding:10px 3px;display:none;"/>
                     </span>
                     <span id="historyWordsBtn" style="height:35px;line-height:35px;width:33.33333%;font-size:15px;background-color: #9f9f9f;display:inline-block;cursor: pointer;
                         text-align: center;">
@@ -602,21 +602,21 @@
                             <div class="ellipsis row0 row" style="width:100%;box-sizing: border-box;padding:0 3px;font-size:15px;color:#ffffff;border-bottom:1px solid rgb(111, 111, 111);
                             text-align: center;height:35px;line-height:35px;cursor: pointer;display:none;">
                             </div>
-                            <div class="loadmore someload" style="width:100%;font-size:12px;height:40px;line-height: 40px;text-align: center;color:#929292;display:none;cursor: pointer;">
+                            <div class="loadmore someload" style="width:100%;font-size:12px;height:25px;line-height: 25px;text-align: center;color:#929292;display:none;cursor: pointer;">
                                 点击加载更多
                             </div>
-                            <div class="loadend someload" style="width:100%;font-size:12px;height:40px;line-height: 40px;text-align: center;color:#929292;display:none;">
+                            <div class="loadend someload" style="width:100%;font-size:12px;height:25px;line-height: 25px;text-align: center;color:#929292;display:none;">
                                 已到底
                             </div>
-                            <div class="loadnodata someload" style="width:100%;font-size:12px;height:40px;line-height: 40px;text-align: center;color:#929292;display:none;">
+                            <div class="loadnodata someload" style="width:100%;font-size:12px;height:25px;line-height: 25px;text-align: center;color:#929292;display:none;">
                                 无单词本
                             </div>
-                            <div class="loading someload" style="width:100%;font-size:12px;height:40px;line-height: 40px;text-align: center;color:#929292;display:none;">
+                            <div class="loading someload" style="width:100%;font-size:12px;height:25px;line-height: 25px;text-align: center;color:#929292;display:none;">
                                 加载中
                             </div>
                             <div id="clickToShowCreateWordbookBtn" onclick="$('#wordbooksPad .wordbooks').click()" style="
-                                width:100%;font-size:12px;height:40px;text-align: center;color:#929292;margin-top:30px;display:none;">
-                                点击空白处新建单词本
+                                width:100%;font-size:12px;height:34px;text-align: center;color:rgb(105 105 105);;margin-top:30px;display:none;">
+                                点击空白处<br/>新建单词本
                             </div>
                         </div>
                         <div class="ellipsis createRowBtn" style="width:100%;box-sizing: border-box;padding:0 3px;font-size:20px;color:#ffffff;border-top:1px dashed rgb(111, 111, 111);
