--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,8 @@
                 <video x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video1" poster
                     style="display: block;position: absolute;top:0;left:100%;;object-fit:cover;background-color: #000000;">
                 </video>
+                <img id="closeViewBtn" style="width:25px;height:25px;position:absolute;right:0;bottom:0;cursor: pointer;opacity: 0.2;" 
+                    draggable="false" src="./img/openeye.png"/>
             </div>
             
             <div id="chooseLoopVideosCountPad" style="width:100%;height:75px;position:absolute;top:230px;background-color: #f5f5f5;display:none;">
