--- a/src/index.html
+++ b/src/index.html
@@ -99,9 +99,9 @@
             </div>
             
             <!-- 视频块 -->
-            <div id="videobox" style="overflow:hidden;position:relative;">
+            <div id="videobox" style="overflow:hidden;position:relative;top:-1000px;">
                 <video  x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video" poster autoplay preload
-                    style="display: block;position: relative;top:-1000px;object-fit:cover;background-color: #000000;">
+                    style="display: block;position: absolute;top:0;object-fit:cover;background-color: #000000;">
                 </video>
                 <video x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video2" poster
                     style="display: block;position: absolute;top:0;left:-100%;;object-fit:cover;background-color: #000000;">
