--- a/src/index.html
+++ b/src/index.html
@@ -757,20 +757,23 @@
                     </div>
                     <div class="phonetic ellipsis" style="font-size: 25px;text-align: center;margin-top:20px;height:25px;line-height:25px;">
                     </div>
-                    <div style="position:absolute;height:60px;width:100%;bottom:100px;">
+                    <div style="position:absolute;height:60px;width:100%;bottom:110px;">
                         <div class="translation ellipsis" style="font-size: 20px;text-align: center;height:25px;line-height:25px;">
                         </div>
                         <div class="inx ellipsis" style="font-size: 20px;text-align: center;margin-top:10px;height:25px;line-height:25px;">
                         </div>
                     </div>
-                    <div style="height:50px;justify-content: space-around;display: flex;align-items: center;position: absolute;bottom:30px;width:100%;">
+                    <div style="height:50px;justify-content: space-around;display: flex;align-items: center;position: absolute;bottom:45px;width:100%;">
                         <button class="prev" style="width:25%;height:50px;cursor: pointer;">上一个</button>
                         <button class="stop" style="width:25%;height:50px;display:none;cursor: pointer;">暂停</button>
                         <button class="start" style="width:25%;height:50px;cursor: pointer;">开始</button>
                         <button class="next" style="width:25%;height:50px;cursor: pointer;">下一个</button>
                     </div>
-                    <div style="width:100%;height:15px;text-align: center;position:absolute;bottom:5px;">
+                    <div style="width:100%;height:15px;text-align: center;position:absolute;bottom:25px;">
                         <span class="restart" style="font-size:12px;cursor: pointer;color: #8e8e8e;text-decoration: underline;">重新开始</span>
+                    </div>
+                    <div style="width:100%;font-size: 12px;color: #8e8e8e;text-align: center;height:15px;line-height:15px;position:absolute;bottom:5px;">
+                        建议先学习一遍, 了解单词后再听
                     </div>
                 </div>
             </div>
