--- a/src/index.html
+++ b/src/index.html
@@ -773,7 +773,7 @@
                         <span class="restart" style="font-size:12px;cursor: pointer;color: #8e8e8e;text-decoration: underline;">重新开始</span>
                     </div>
                     <div style="width:100%;font-size: 12px;color: #8e8e8e;text-align: center;height:15px;line-height:15px;position:absolute;bottom:5px;">
-                        建议先学习一遍, 了解单词后再听
+                        多听自然听懂, 多见自然会写, 背诵自然忘.
                     </div>
                 </div>
             </div>
