--- a/src/index.html
+++ b/src/index.html
@@ -224,20 +224,24 @@
                         </span>
                     </div>
                     <div style="width:100%;box-sizing: border-box;position:absolute;top:25px;bottom:0;">
-                        <div id="relatedWordsPad" class="scrollbar1" style="width:100%;box-sizing: border-box;position:absolute;top:0px;bottom:0;overflow: auto;overflow-x: hidden;">
+                        <div id="relatedWordsPad" class="scrollbar1" style="width:100%;box-sizing: border-box;position:absolute;top:0px;bottom:25px;overflow: auto;overflow-x: hidden;">
                             <div id="relatedWord0" class="ellipsis" style="height:25px;line-height:21px;width:100%;font-size:15px;padding:2px 3px;box-sizing: border-box;
                                 border-bottom: 1px dashed  #3c3c3c;cursor: pointer;letter-spacing: 0.5px;display:none;">
                             </div>
+                        </div>
+                        <div id="toShortRelatedWordsBtn" style="width:100%;line-height:24px;height:24px;position: absolute;bottom:0;border-top:1px solid #3c3c3c;font-size: 13px;text-align: center;
+                            cursor: pointer;color:#9e9e9e;">
+                            ←
                         </div>
                     </div>
                 </div>
                 <div style="position:absolute;bottom:0;width:100%;height:30px;background-color: #4c4c4c;border-top:1px solid #5f5f5f;">
                     <span id="favor" style="width:50%;font-size:14px;text-align: center;
-                                cursor: pointer;height:30px;line-height:30px;display:inline-block;">
+                                cursor: pointer;height:30px;line-height:30px;display:inline-block;vertical-align: middle;">
                         收 藏
                     </span>
                     <span id="addToWordbookBtn" style="width:50%;font-size:14px;text-align: center;border-left: 1px solid rgb(130, 126, 126);margin-left:-1px;
-                                cursor: pointer;height:30px;line-height:30px;display:inline-block;">
+                                cursor: pointer;height:30px;line-height:30px;display:inline-block;vertical-align: middle;">
                         加入单词本
                     </span>
                 </div>
@@ -499,35 +503,7 @@
                     </div>
                 </div>
                 <div  id="chatprivatepad"  style="position:absolute;bottom:0;width:100%;top:30px;display:none;font-size:0;">
-                    <div style="height:30px;width:100%;">
-                        <form onsubmit="return false" action="javascript:return true">
-                            <input id="chatinput" placeholder="在这输入" autocomplete="off" type="text"
-                                style="width:100%;box-sizing: border-box;height:30px;display:inline-block;border: none;
-                                    background-color: #eaeaea;padding:0 3px;" />
-                        </form>
-                    </div>
-                    <div class="chatmsgspad" class="scrollable noscrollbar" 
-                        style="width:100%;overflow: auto;box-sizing: border-box;padding:0px 3px 3px 3px;
-                            position:absolute;bottom:0;top:30px;font-size:0;padding-top: 5px;">
-                        <div class="chatmsgtemple" 
-                            style="font-size:0;width:100%;height:35px;display:none;margin-bottom:5px;position: relative;">
-                            <span class="name" 
-                                style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;width:55px;
-                                    overflow: hidden;text-align: right;color:#4a4a4a;">
-                            </span>
-                            <span style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;margin-left: 2px;color:#4a4a4a;">
-                                :
-                            </span>
-                            <span class="msg translatable" 
-                                style="top: 0;vertical-align: middle;display:inline-block;font-size:13px;line-height:20px;position: absolute;left:65px;
-                                    right:0px;height:20px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">
-                            </span>
-                            <span class="looking" 
-                                style="top: 20px;vertical-align: middle;display:inline-block;font-size:12px;line-height:15px;position: absolute;left:65px;
-                                    right:0px;height:15px;overflow: hidden;color:#9a9a9a;text-overflow: ellipsis;white-space: nowrap;">
-                            </span>
-                        </div>
-                    </div>
+                    <span style="font-size:16px;margin-top:30px;" class="translatable">coming soon</span>
                 </div>
             </div>
             
