--- a/src/history.html
+++ b/src/history.html
@@ -107,8 +107,11 @@
                         <img class="cover" draggable="false" src="" style="width:100%;height:106px;object-fit: cover;"/>
                     </div>
                     <progress class="progress" style="width:100%;height:5px;position:absolute;top:105px;"></progress>
-                    <div class="name lines2" style="width:100%;height:46px;background-color: #ffffff;font-size:13px;line-height:20px;overflow: hidden;word-break: break-word;
-                            padding:3px;box-sizing: border-box;color:#444444;white-space: break-spaces;display: -webkit-box;">
+                    <div class="name ellipsis" style="width:100%;height:20px;background-color: #ffffff;font-size:13px;line-height:20px;
+                            box-sizing: border-box;color:#444444;">
+                    </div>
+                    <div class="author ellipsis" style="width:100%;height:20px;background-color: #ffffff;font-size:13px;line-height:20px;
+                            box-sizing: border-box;color:#a2a2a2;">
                     </div>
                 </a>
             </ul>
@@ -230,12 +233,8 @@
                         }).bind('touchend',function(){
                             coverout(item,videoele)
                         })
-                        var fff = item.chname
-                        var ff1 = item.chreference||item.seriesChname
-                        if(ff1 && ff1!=fff){
-                            fff=fff+'\n'+ff1
-                        }
-                        videoele.find('.name').text(fff)
+                        videoele.find('.name').text(item.seriesChname || item.chname)
+                        videoele.find('.author').text(item.nickname)
                         if(item.duration && item.currentTime)
                             videoele.find('.progress').attr('value',item.currentTime).attr('max',item.duration)
                         else
