--- a/src/list.html
+++ b/src/list.html
@@ -107,10 +107,12 @@
                         <img class="cover" draggable="false" src="" style="width:100%;height:106px;object-fit: cover;"/>
                     </div>
                     <progress class="progress" style="width:100%;height:5px;position:absolute;top:105px;"></progress>
-                    <div class="name lines2" style="width:100%;height:46px;background-color: #ffffff;font-size:13px;line-height:20px;display: -webkit-inline-box;
-                            padding:3px;box-sizing: border-box;color:#444444;">
+                    <div class="name ellipsis" style="width:100%;height:20px;background-color: #ffffff;font-size:13px;line-height:20px;
+                            box-sizing: border-box;color:#444444;">
                     </div>
-                    
+                    <div class="author ellipsis" style="width:100%;height:20px;background-color: #ffffff;font-size:13px;line-height:20px;
+                            box-sizing: border-box;color:#a2a2a2;">
+                    </div>
                 </a>
             </ul>
             
@@ -253,12 +255,13 @@
                         }
 
                         videoele.find('.name').text(item.seriesChname || item.chname)
+                        videoele.find('.author').text(item.nickname)
                         if(currentTime && durationsec)
                             videoele.find('.progress').attr('value',currentTime).attr('max',durationsec)
                         else
                             videoele.find('.progress').hide()
                         videoele.css('display','block')
-                        videoele.attr('href',`./video.html?videoNo=${item.no}`)
+                        videoele.attr('href',`./index.html?videoNo=${item.no}&olh=1`)
                         $('.videoList').append(videoele)
 
                         if(activeindex == inx){
