--- a/src/index.html
+++ b/src/index.html
@@ -407,6 +407,11 @@
                         width:calc(100% - 28px);max-height:40px;line-height:20px;box-sizing: border-box;padding-right:5px;vertical-align: middle;">
                     </span>
                 </div> -->
+                <span id="inSeriesPad" style="display:none;width:35px;height:40px;vertical-align: middle;text-align: center;">
+                    <img src="./img/series.png" style="width:25px;height:25px;display:block;margin:0 5px;" />
+                    <div class="no" class="ellipsis" style="width:35px;height:15px;line-height:15px;display:block;font-size:12px;color:#b5b5b5;">
+                    0</div>
+                </span>
                 <div id="title" class="lines2" style="display:-webkit-inline-box;;height:40px;width:calc(100% - 134px);vertical-align: middle;box-sizing: border-box;
                     font-size: 12px;color:#b5b5b5;overflow:hidden;word-break: break-word;
                     line-height:20px;padding: 0 5px;">
