--- a/src/index.html
+++ b/src/index.html
@@ -101,16 +101,16 @@
             <!-- 视频块 -->
             <div id="videobox" style="overflow:hidden;position:relative;top:-1000px;">
                 <video  x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video" poster autoplay preload
-                    style="display: block;position: absolute;top:0;object-fit:cover;background-color: #000000;">
+                    style="display: block;position: absolute;top:0;object-fit:contain;background-color: #000000;">
                 </video>
                 <img id="video2" 
-                    style="display: block;position: absolute;top:0;left:-100%;;object-fit:cover;background-color: #000000;width:100%;"
+                    style="display: block;position: absolute;top:0;left:-100%;;object-fit:contain;background-color: #000000;width:100%;"
                 />
                 <img id="video1" 
-                    style="display: block;position: absolute;top:0;left:100%;;object-fit:cover;background-color: #000000;width:100%;"
+                    style="display: block;position: absolute;top:0;left:100%;;object-fit:contain;background-color: #000000;width:100%;"
                 />
                 <svg id="searchpadbtn" style="position:absolute;right:0;top:0;opacity: 0.8;" t="1621525927027" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3665" width="25" height="25"><path d="M826.624 779.008l-130.56-130.56a292.352 292.352 0 1 0-37.376 35.072l131.584 131.584a25.6 25.6 0 0 0 36.352-36.096zM236.8 453.12a241.664 241.664 0 1 1 241.664 241.664 241.92 241.92 0 0 1-241.664-241.664z" fill="#848484" p-id="3666"></path><path d="M484.864 242.688a217.6 217.6 0 0 0-187.648 108.288 25.6 25.6 0 0 0 9.984 35.072 25.6 25.6 0 0 0 12.8 3.328 25.6 25.6 0 0 0 22.272-12.544 165.888 165.888 0 0 1 143.36-82.944 25.6 25.6 0 0 0 0-51.2z" fill="#848484" p-id="3667"></path></svg>            
-                <img id="closeViewBtn" style="width:25px;height:25px;position:absolute;right:0;bottom:0;cursor: pointer;opacity: 0.2;" 
+                <img id="closeViewBtn" style="width:25px;height:25px;position:absolute;right:0;bottom:0;cursor: pointer;opacity: 0.5;" 
                     draggable="false" src="./img/openeye.png"/>
             </div>
             
