--- a/src/index.html
+++ b/src/index.html
@@ -103,10 +103,10 @@
                 <video  x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video" poster autoplay preload
                     style="display: block;position: absolute;top:0;object-fit:contain;background-color: #000000;">
                 </video>
-                <img id="video2" 
+                <img id="video2" src="./img/black.png"
                     style="display: block;position: absolute;top:0;left:-100%;;object-fit:contain;background-color: #000000;width:100%;"
                 />
-                <img id="video1" 
+                <img id="video1" src="./img/black.png"
                     style="display: block;position: absolute;top:0;left:100%;;object-fit:contain;background-color: #000000;width:100%;"
                 />
                 <svg id="searchpadbtn" style="position:absolute;right:0;top:0;opacity: 0.8;" t="1621525927027" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3665" width="25" height="25"><path d="M826.624 779.008l-130.56-130.56a292.352 292.352 0 1 0-37.376 35.072l131.584 131.584a25.6 25.6 0 0 0 36.352-36.096zM236.8 453.12a241.664 241.664 0 1 1 241.664 241.664 241.92 241.92 0 0 1-241.664-241.664z" fill="#848484" p-id="3666"></path><path d="M484.864 242.688a217.6 217.6 0 0 0-187.648 108.288 25.6 25.6 0 0 0 9.984 35.072 25.6 25.6 0 0 0 12.8 3.328 25.6 25.6 0 0 0 22.272-12.544 165.888 165.888 0 0 1 143.36-82.944 25.6 25.6 0 0 0 0-51.2z" fill="#848484" p-id="3667"></path></svg>            
@@ -189,7 +189,7 @@
 
             <div id="summtrans" 
                 style="box-sizing: border-box;font-size:0;width:100%;position:absolute;
-                    top: 0;color: #ffffff;display:none;border-bottom:1px solid #827e7e;">
+                    top: 0;color: #ffffff;display:none;">
                 <div style="width:calc(100% - 111px);display:inline-block;position: absolute;vertical-align: middle;border-right: 1px solid #3c3c3c;
                         top:0;bottom:30px;">
                     <div style="height: 24px;">
@@ -235,7 +235,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="position:absolute;bottom:0;width:100%;height:30px;background-color: #4c4c4c;border-top:1px solid #5f5f5f;">
+                <div style="position:absolute;bottom:0;width:100%;height:30px;background-color: #4c4c4c;">
                     <span id="favor" style="width:50%;font-size:14px;text-align: center;
                                 cursor: pointer;height:30px;line-height:30px;display:inline-block;vertical-align: middle;">
                         收 藏
@@ -269,7 +269,7 @@
                     </div>
                 </div>
             </div>
-            <div id="subtitlePad" style="width:100%;margin-top:5px;min-height:84px;">
+            <div id="subtitlePad" style="width:100%;margin-top:2px;min-height:84px;">
                 <div id="zh_subtitles" class="unselectable" 
                     style="line-height: 30px;width: 100%;text-align: center;font-size: 18px;" >
                 </div>
