--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
             <div style="position:absolute;top:30%;width:100%;height:100px;">
                 <div style="font-size:50px;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
                 <div style="font-size:23px;width:100%;text-align: center;color:#e1e1e1;font-weight: 100;margin-top: -5px;">
-                    这儿只有英语
+                    这里只有英语
                 </div>
             </div>
         </div>
