--- a/src/index.html
+++ b/src/index.html
@@ -138,6 +138,26 @@
                 </div>
             </div>
             
+            <div id="chooseDifficultyPad" style="width:100%;height:65px;position:absolute;top:205px;background-color: rgba(245,245,245,0.8);display:none;">
+                <div style="height:30px;justify-content: space-around;align-items: center;display: flex;margin-top:5px;">
+                    <span class="e1 e" data=1 style="display:inline-block;font-size:16px;width:25%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
+                        line-height:30px;box-sizing: border-box;vertical-align: middle;cursor: pointer;background-color:#ffffff;">
+                        简单
+                    </span>
+                    <span class="e2 e" data=2 style="display:inline-block;font-size:16px;width:25%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
+                        line-height:30px;box-sizing: border-box;vertical-align: middle;cursor: pointer;background-color:#ffffff;">
+                        一般
+                    </span>
+                    <span class="e3 e" data=3 style="display:inline-block;font-size:16px;width:25%;border:1px solid #9b9b9b;border-radius: 3px;text-align: center;height:30px;
+                        line-height:30px;box-sizing: border-box;vertical-align: middle;cursor: pointer;background-color:#ffffff;">
+                        好难
+                    </span>
+                </div>
+                <div style="text-align: center;height:30px;line-height: 30px;">
+                    <span class="restSecond" style="font-size:16px;margin-left:5px;color:#484848;"></span>
+                </div>
+            </div>
+
             <div id="searchpad" style="position:absolute;width:100%;background-color: rgba(0, 0, 0, 0.87);top:0px;
                     font-size:0;display:none;box-sizing: border-box;padding:10px 5px;">
                 <span class="searchtag" data="每日一句" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #ffd257;text-align: center;
