--- a/src/index.html
+++ b/src/index.html
@@ -806,7 +806,17 @@
             </div>
 
             <div id="extendSearchPad" style="width:100%;height:100%;position:absolute;top:0;background-color: rgba(0, 0, 0, 0.8);display:none;">
-                <iframe id="extendSearchFrame"  style="width:100%;height:80%;position:absolute;top:0;box-sizing: border-box;border: none;"></iframe>
+                <div style="height:40px;background-color:#ffffff;border-bottom: 1px solid #e0e0e0;">
+                    <span class="bing" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:50%;text-align: center;cursor: pointer;">
+                        Bing
+                    </span>
+                    <span class="baidu" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:50%;text-align: center;margin-left:-1px;
+                        border-left:1px solid #c9c9c9;cursor: pointer;">
+                        百度
+                    </span>
+                </div>
+                <iframe id="extendSearchFrame"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;"></iframe>
+                <iframe id="extendSearchFrame1"  style="width:100%;height:80%;box-sizing: border-box;border: none;display:none;"></iframe>
             </div>
 
             <div id="rollShowWordsPad" style="width:100%;height:100%;position:absolute;top:0;background-color: rgba(0, 0, 0, 0.8);display:none;">
