--- a/src/index.html
+++ b/src/index.html
@@ -806,12 +806,11 @@
             </div>
 
             <div id="extendSearchPad" style="width:100%;height:100%;position:absolute;top:0;background-color: rgba(0, 0, 0, 0.8);display:none;">
-                <div style="height:40px;background-color:#ffffff;border-bottom: 1px solid #e0e0e0;">
+                <div style="height:40px;background-color:#ffffff;">
                     <span class="bing" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:50%;text-align: center;cursor: pointer;">
                         Bing
                     </span>
-                    <span class="baidu" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:50%;text-align: center;margin-left:-1px;
-                        border-left:1px solid #c9c9c9;cursor: pointer;">
+                    <span class="baidu" style="font-size:16px;display:inline-block;height:40px;line-height: 40px;width:50%;text-align: center;cursor: pointer;">
                         百度
                     </span>
                 </div>
@@ -841,7 +840,7 @@
                         <span class="restart" style="font-size:12px;cursor: pointer;color: #8e8e8e;text-decoration: underline;">重新开始</span>
                     </div>
                     <div style="width:100%;font-size: 12px;color: #8e8e8e;text-align: center;height:15px;line-height:15px;position:absolute;bottom:5px;">
-                        多听, 多看, 多用
+                        看懂&nbsp;&nbsp;→&nbsp;&nbsp;听懂&nbsp;&nbsp;→&nbsp;&nbsp;会说&nbsp;&nbsp;→&nbsp;&nbsp;会写
                     </div>
                 </div>
             </div>
