--- a/src/index.html
+++ b/src/index.html
@@ -844,6 +844,34 @@
                     </div>
                 </div>
             </div>
+
+
+
+            <div id="seriesPad" style="position:absolute;bottom:0;height:300px;width:100%;font-size:0;background-color: #000000;display:none;">
+                <div class="seiresName ellipsis" style="width:100%;height:30px;line-height: 30px;font-size: 15px;text-align: center;color:#b3b3b3;
+                    box-sizing: border-box;padding:0 5px;">
+                </div>
+                <div class="rows noscrollbar" style="width:100%;height:calc(100% - 30px);overflow: auto;" >
+                    <div class="trow row" style="width:100%;height:40px;margin-bottom:5px;cursor: pointer;display: none;">
+                        <img class="cover" style="display:inline-block;width:40px;height:40px;vertical-align: middle;margin-left:5px;object-fit: cover;"/>
+                        <span class="ellipsis name" style="display:inline-block;vertical-align: middle;font-size: 15px;height:40px;line-height:40px;width:calc(100% - 45px);
+                            box-sizing: border-box;padding:0  5px;color: #b3b3b3;">
+                        </span>
+                    </div>
+                    <div class="loadmore someload" style="width:100%;font-size:12px;height:40px;line-height: 40px;text-align: center;color:#929292;cursor: pointer;">
+                        点击加载更多
+                    </div>
+                    <div class="loadend someload" style="width:100%;font-size:12px;height:40px;line-height: 40px;text-align: center;color:#929292;display:none;">
+                        已到底
+                    </div>
+                    <div class="loadnodata someload" style="width:100%;font-size:12px;height:40px;line-height: 40px;text-align: center;color:#929292;display:none;">
+                        暂无数据
+                    </div>
+                    <div class="loading someload" style="width:100%;font-size:12px;height:40px;line-height: 40px;text-align: center;color:#929292;display:none;">
+                        加载中
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
    
