--- a/src/index.html
+++ b/src/index.html
@@ -753,6 +753,10 @@
                             修改
                         </span>
                     </div>
+                    <div class="shareBtn" style="width:100%;text-align: center;height:35px;line-height:35px;font-size:15px;background-color: #adadad;position:absolute;bottom:72px;
+                        cursor: pointer;">
+                        分 享
+                    </div>
                     <div class="deleteBtn" style="width:100%;text-align: center;height:35px;line-height:35px;font-size:15px;background-color: #adadad;position:absolute;bottom:36px;
                         cursor: pointer;">
                         删 除
