--- a/src/my.html
+++ b/src/my.html
@@ -26,6 +26,7 @@
         <script src="https://s2.pstatp.com/cdn/expire-1-M/vConsole/3.4.0/vconsole.min.js" type="application/javascript"></script>
         <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script> 
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script> 
+        <script src="./js/common.js" type="application/javascript"></script>
         <script src="./config.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>    
         <script src="./js/page-pre.js" type="application/javascript"></script>
@@ -71,7 +72,7 @@
                     翌日更新
                 </div>
                 <div style="text-align: center;border:1px solid #868686;padding:3px 10px;width:200px;border-radius: 3px;margin:auto;cursor: pointer;
-                        position:absolute;bottom:100px;left:50%;transform:translateX(-50%);color:#868686;"
+                        position:absolute;bottom:100px;left:50%;transform:translateX(-50%);color:#868686;display:none;"
                     onclick="
                         var r=confirm('确认重置吗?')
                         if(r){
@@ -81,6 +82,43 @@
                         }
                     ">
                     重 置
+                </div>
+
+
+                <div style="text-align: center;border:1px solid #868686;padding:3px 10px;width:200px;border-radius: 3px;margin:auto;cursor: pointer;
+                        position:absolute;bottom:150px;left:50%;transform:translateX(-50%);color:#868686;"
+                    onclick="
+                        comm.prompt({message:'请输入登录码',confirm:function(r){
+                            if(r){
+                                $.ajax({
+                                    url:'/mumu/login-by-logincode',
+                                    data:{logincode:r},
+                                    success:function(res){
+                                        if(res.code==0){
+                                            localStorage.removeItem(config.project+'-login')
+                                            localStorage.removeItem(config.project+'-loginTime')
+                                            location.reload()
+                                        }else{
+                                            comm.alert(res.msg)
+                                        }
+                                    }
+                                })
+                            }
+                        }})
+                    ">
+                    登录
+                </div>
+
+                <div style="text-align: center;border:1px solid #868686;padding:3px 10px;width:200px;border-radius: 3px;margin:auto;cursor: pointer;
+                        position:absolute;bottom:110px;left:50%;transform:translateX(-50%);color:#868686;"
+                    onclick="
+                        $.post('/mumu/get-logincode',function(res){
+                            var logincode = res.data.logincode;
+                            comm.copy({text:logincode})
+                            comm.alert({title:'登录码',message:logincode,messageclass:'selectable',button:'已复制'})
+                        })
+                    ">
+                    获取登录码
                 </div>
             </div>
             <div id="version" style="font-size: 13px;color: #c3c3c3;cursor: pointer;position:absolute;bottom: 51px;height:20px;line-height: 20px;width:100%;text-align: center;">
