--- a/src/wordbook.html
+++ b/src/wordbook.html
@@ -131,7 +131,7 @@
                     <span class="restart" style="font-size:12px;cursor: pointer;color: #8e8e8e;text-decoration: underline;">重新开始</span>
                 </div>
                 <div style="width:100%;font-size: 12px;color: #8e8e8e;text-align: center;height:15px;line-height:15px;position:absolute;bottom:5px;">
-                    看懂&nbsp;&nbsp;→&nbsp;&nbsp;听懂&nbsp;&nbsp;→&nbsp;&nbsp;会说&nbsp;&nbsp;→&nbsp;&nbsp;会写
+                    学习一遍再听, 效果更好
                 </div>
             </div>
         </div>
